add a cell showing how the pixels added back to the 4 make it now be classified as 9

--- a/keras_example.ipynb
+++ b/keras_example.ipynb
@@ -226,35 +226,8 @@
       "Num 4-indices is 5842\n",
       "Num 9-indices is 5949\n",
       "On 4-index 0 of 5842...\n",
-      "On 4-index 250 of 5842...\n",
-      "On 4-index 500 of 5842...\n",
-      "On 4-index 750 of 5842...\n",
-      "On 4-index 1000 of 5842...\n",
-      "On 4-index 1250 of 5842...\n",
-      "On 4-index 1500 of 5842...\n",
-      "On 4-index 1750 of 5842...\n",
-      "On 4-index 2000 of 5842...\n",
-      "On 4-index 2250 of 5842...\n",
-      "On 4-index 2500 of 5842...\n",
-      "On 4-index 2750 of 5842...\n",
-      "On 4-index 3000 of 5842...\n",
-      "On 4-index 3250 of 5842...\n",
-      "On 4-index 3500 of 5842...\n",
-      "On 4-index 3750 of 5842...\n",
-      "On 4-index 4000 of 5842...\n",
-      "On 4-index 4250 of 5842...\n",
-      "On 4-index 4500 of 5842...\n",
-      "On 4-index 4750 of 5842...\n",
-      "On 4-index 5000 of 5842...\n",
-      "On 4-index 5250 of 5842...\n",
-      "On 4-index 5500 of 5842...\n",
-      "On 4-index 5750 of 5842...\n",
-      "          four_index  nine_index   abs_diff\n",
-      "15841297        2662        5059  21.780394\n",
-      "32165126        5406        4832  22.047058\n",
-      "4098052          688        5140  23.631376\n",
-      "8407895         1413        1958  24.513723\n",
-      "32667035        5491        1076  25.309805\n",
+      "   four_index  nine_index   abs_diff\n",
+      "0        2662        5059  21.780394\n",
       "4-index to use is 2662\n",
       "9-index to use is 5059\n"
      ]
@@ -283,10 +256,10 @@
     "    # indices were computed and are \"cached\" in some lines below and\n",
     "    # are loaded there.  They can be recomputed by small modification\n",
     "    # of eliminating this break check.\n",
-    "    #if fii==0:\n",
-    "    #    break\n",
+    "    if fii==0:\n",
+    "        break\n",
     "#here, load the \"cached\" data\n",
-    "#pd_data_dict={'four_index':[2662],'nine_index':[5059],'abs_diff':[21.780394]}\n",
+    "pd_data_dict={'four_index':[2662],'nine_index':[5059],'abs_diff':[21.780394]}\n",
     "sim_data_df=pd.DataFrame.from_dict(pd_data_dict)\n",
     "sim_data_df.sort_values('abs_diff',inplace=True, kind='quicksort')\n",
     "print(sim_data_df.head())\n",
@@ -632,6 +605,49 @@
     "plotImg(gl_sum_norm,t=\"Post-Processed Integrated Gradients\")\n",
     "gl_sum_wbl=vecCap(gl_sum_norm+baseline)\n",
     "plotImg(gl_sum_wbl,t=\"Baseline With Merged & Processed Gradient Data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Taking the 4 merged with the IG-pixels the data is now classified as a 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4.535420636601027e-14,\n",
+       " 2.4610847214334708e-12,\n",
+       " 5.366002087114907e-10,\n",
+       " 2.1015009177283162e-10,\n",
+       " 0.006022866815328598,\n",
+       " 7.966237045020641e-12,\n",
+       " 1.0129502903580647e-15,\n",
+       " 8.528211310476763e-07,\n",
+       " 4.04130162223737e-07,\n",
+       " 0.9939759373664856]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(gl_sum_wbl.reshape(1, 28, 28, 1))[0].tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the output from the classifier, the prediction for 9 is 99.39%."
    ]
   },
   {
